#10, #12